Guardo antes de hacer el camino sanabrés. Tengo que mirar a ver por qué en DialogoMiCamino no muestra bien los campos de la listView. Parece que no va bien el Binding.

--- a/YPA/Views/Caminos.xaml
+++ b/YPA/Views/Caminos.xaml
@@ -25,8 +25,10 @@
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
--->
-    <StackLayout BackgroundColor="Red" >
+-->    
+    
+    <StackLayout BackgroundColor="Red"  Orientation="Vertical">
+        <!-- <Label Text="{Binding miTexto}"  WidthRequest="300" HeightRequest="60" FontSize="14"/> -->
         <ListView x:Name="listView"
               ItemsSource="{Binding listaCaminos, Mode=TwoWay}"
               IsGroupingEnabled="False" 
