- Se lleva la clase Etapa de DialogoMiCaminoVM a Global.cs - Se crea el diálogo MenuMisEtapas con las operaciones que se van a poder hacer sobre el listado de etapas (de momento no se ha implementado el código de cada operación). - Tablas.cs: Se añade a la clase TablaBaseCaminos el Equals sobre el nombrePoblacion (hasta ahora el Equals sólo funcionaba con el id). - MiCamino.cs: Modificación del método DameListaEtapas que ahora devuelve un  ObservableCollection<Etapa> Mejoras en el RellenarLista() al que se añaden dos nuevos argumentos opcionales que son nodoInicial y nodoFinal para que en algunos casos sólo se muestren los nodos de una etapa concreta. En MasajearLista() también hay alguna modificación relacionada con esos dos nuevos argumentos. - VerCaminoVM.cs: Se ha añadido una nueva propiedad que es "mostrarCabecera" con la que se permiten visualizar algunas cabeceras en la salida de VerCamino (por ejemplo, cuando se listan los nodos de una etapa no nos interesa que se vea la botonera superior). - VerEtapasVM: Se implementan los métodos ItemTappedCommand() y OpcionesSobreEtapaCommand() - CellMisEtapas.xaml: Se añade el botón que llama a OpcionesSobreEtapaCommand() que hace que se muestre el diálogo "MenuMisEtapas". - VerCamino.xaml: Algunas cabeceras se visializarán o no de acuerdo a la propiedad  "mostrarCabecera".

--- a/YPA/Views/DataTemplates/CellEtapaCamino.xaml
+++ b/YPA/Views/DataTemplates/CellEtapaCamino.xaml
@@ -37,7 +37,7 @@
                                    Margin="0" Padding="0" 
                                    HorizontalOptions="StartAndExpand" VerticalOptions="Center"  
                                    VerticalTextAlignment="Center" />
-            <Label Text="{Binding distancia,FallbackValue=No dis}" Grid.Column="3"
+            <Label Text="{Binding distancia,FallbackValue=No dis, StringFormat='{0:0.0} km'}" Grid.Column="3"
                                    FontSize="Caption" TextColor="Black" 
                                    Margin="0" Padding="0" 
                                    HorizontalOptions="StartAndExpand" VerticalOptions="Center"  
